kubernetes/apps/database/emqx/cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Smart Home
    gethomepage.dev/name: EMQX
    gethomepage.dev/description: MQTT broker
    gethomepage.dev/icon: emqx.png
    gethomepage.dev/pod-selector: apps.emqx.io/managed-by=emqx-operator
spec:
  ingressClassName: internal
  rules:
    - host: emqx.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
